# apis_mt76xx_network

./: .gitmodules  CMakeLists.txt  README.md  build_all.sh  download.sh
inc/: cgi.h  common.h  crc16.h
src/: cgi.c  crc16.c  main.c
test/: test.c
